# moonbit-docs

./: .autocorrectignore  .autocorrectrc  .gitignore  .prettierignore  .prettierrc  .readthedocs.yaml  AGENTS.md  CONTRIBUTING-zh.md  CONTRIBUTING.md  LICENSE  LICENSE.md  READEM-zh.md  README-zh.md  README.md  build-system-configuration.md  build-system-tutorial.md  document.code-workspace  exception-handling.md  ffi-and-wasm-host.md  index.md  justfile  mod.schema.json  moon_build_system_tutorial.md  package-manage-tour.md  package.json  parser.mly  pkg.schema.json  pnpm-lock.yaml  pnpm-workspace.yaml  process_error_codes.py  tour.md  typos.toml
.github/: dependabot.yml  sync.yml
docs/: ShikiHighlight.md  WritingDocs.md
language/: async-experimental.md  attributes.md  derive.md  docs.md  error-handling.md  ffi.md  fundamentals.md  index.md  introduction.md  methods.md  packages.md  tests.md  verification.md
legacy/: .gitignore
migration/: CONTRIBUTING.md  README.md  pkg.schema.json
moonbit-docs/: .gitignore  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  (+1 more)
next/sources/native-ffi/: CMakeLists.txt  README.md  main.c  moon.mod.json
next/sources/native-ffi/src/funcref_map_inplace/: funcref_map_inplace.mbti  moon.pkg.json  stub.c  top.mbt
next/sources/native-ffi/src/funcref_qsort/: funcref_qsort.mbti  stub.c  top.mbt
next/sources/native-ffi/src/funcref_qsort_closure/: funcref_qsort_closure.mbti  moon.pkg.json  stub.c  top.mbt
next/sources/native-ffi/src/funcref_register_callback/: funcref_register_callback.mbti  stub.c  top.mbt
(+4548 files in other folders)
